Fix project header sizing on mobile

--- a/syntactic-front-end-redux/src/scss/bootstrap/components/_navbar.scss
+++ b/syntactic-front-end-redux/src/scss/bootstrap/components/_navbar.scss
@@ -8,6 +8,11 @@
     z-index: 100;
     background: $white;
 
+    // Mobile only
+    @media (max-width: 767px) {
+        margin-bottom: $spacer;
+    }
+
     button {
         background: none;
         border: none;
